# ImageInference

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.sh  executorch_BSD-LICENSE  install.sh  interactiv.sh  setup.sh
android/: build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/java/com/example/imageinference/: ExampleInstrumentedTest.kt
android/app/src/androidTest/java/com/neuralnetwork/imageinference/: ExampleInstrumentedTest.kt
android/app/src/androidTest/java/com/neuralnetwork/visioninference/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/imageinference/: MainActivity.kt
android/app/src/main/java/com/example/imageinference/models/: ImageNet.kt  ModelAssets.kt
android/app/src/main/java/com/example/imageinference/ui/dashboard/: DashboardFragment.kt  DashboardViewModel.kt
android/app/src/main/java/com/example/imageinference/ui/details/: DetailsConnector.kt  DetailsFragment.kt  DetailsViewModel.kt  ModelDetails.kt
android/app/src/main/java/com/example/imageinference/ui/home/: HomeFragment.kt  HomeViewModel.kt
android/app/src/main/java/com/example/imageinference/ui/image/: Image.kt  ImageFragment.kt  ImageViewModel.kt
android/app/src/main/java/com/example/imageinference/ui/menu/: MenuFragments.kt  MyItemRecyclerViewAdapter.kt
android/app/src/main/java/com/example/imageinference/ui/notifications/: NotificationsFragment.kt  NotificationsViewModel.kt
android/app/src/main/java/com/neuralnetwork/imageinference/: Extensions.kt  MainActivity.kt
android/app/src/main/java/com/neuralnetwork/imageinference/datastore/: DataStoreViewModel.kt  DataStoreViewModelFactory.kt  ImageCollectionsSerializer.kt
android/app/src/main/java/com/neuralnetwork/imageinference/model/: ImageNet.kt  Model.kt  ModelAssets.kt  ModelConnector.kt  ModelDetails.kt  ModelExecutor.kt  ModelState.kt  ModelType.kt  TensorImageUtils.java
android/app/src/main/java/com/neuralnetwork/imageinference/ui/details/: DetailsConnector.kt  (+4 more)
android/app/src/main/java/com/neuralnetwork/imageinference/utils/: PathUtil.kt
android/app/src/main/java/com/neuralnetwork/visioninference/: Extensions.kt  MainActivity.kt
android/app/src/main/java/com/neuralnetwork/visioninference/datastore/: DataStoreViewModel.kt  DataStoreViewModelFactory.kt  ImageCollectionsSerializer.kt
android/app/src/main/java/com/neuralnetwork/visioninference/model/: ImageNet.kt  Model.kt  ModelAssets.kt  ModelConnector.kt  ModelDetails.kt  ModelState.kt  ModelType.kt  TensorImageUtils.java
android/app/src/main/proto/: ImageCollections.proto
android/app/src/main/res/drawable/: ic_dashboard_black_24dp.xml  ic_home_black_24dp.xml  ic_image_google.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_menu_google.xml  ic_navigate_before_google.xml  ic_navigate_next_google.xml  ic_notifications_black_24dp.xml  ic_photo_camera_google.xml  ic_settings_google.xml  ic_video_camera_google.xml  inference.xml
android/app/src/main/res/layout/: activity_benchmark.xml  activity_main.xml  dialog_add_collection.xml  fragment_details.xml  fragment_image.xml  fragment_menu.xml  fragment_menu_fragments.xml  fragment_menu_fragments_list.xml  fragment_photo_camera.xml  fragment_video_camera.xml  item_benchmark_details.xml  item_image_text.xml  list_item_model.xml  settings_activity.xml
android/app/src/main/res/menu/: benchmark_top_app_bar.xml  bottom_nav_menu.xml  image_selection_menu.xml
android/app/src/main/res/mipmap-anydpi/: ic_launcher.xml
android/app/src/main/res/navigation/: mobile_navigation.xml
android/app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  provider_paths.xml  root_preferences.xml
android/app/src/test/java/com/example/imageinference/: ExampleUnitTest.kt
android/app/src/test/java/com/neuralnetwork/imageinference/: ExampleUnitTest.kt
android/app/src/test/java/com/neuralnetwork/visioninference/: ExampleUnitTest.kt
android/executorch_extension/android/: build.gradle
android/executorch_extension/android/jni/: jni_layer.cpp  jni_layer_constants.h  jni_layer_llama.cpp
android/executorch_extension/android/src/main/java/org/pytorch/executorch/: DType.java  EValue.java  INativePeer.java  LlamaCallback.java  LlamaModule.java  Module.java  NativePeer.java  Tensor.java
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
backend/: CMakeLists.txt
backend/bare_metal/: CMakeLists.txt
backend/baremetal/: CMakeLists.txt  ResNet50.cpp  ResNet50.h  __init__.py  baremetal_ops.yaml  execu_resnet50.cpp  execu_resnet50.py  execu_resnet50_out.cpp  execu_resnet50_out.h  export_utils.py  resnet50TorchLayer.txt  resnet50v15.py  resnet50v15_module.py  resnet50weights.txt
backend/baremetal/math/: Array.h  Image.h  Kernel.h
backend/baremetal/model/: IModel.h  ResNet50.cpp  ResNet50.h
backend/baremetal/model/test/: ResNet50Test.cpp  ResNet50Test.h
backend/baremetal/test/benchmarks/: resnet50.cpp
backend/baremetal/test/model/: ResNet50.cpp
backend/baremetal/test/types/: Image.cpp  Kernel.cpp  Matrix.cpp
backend/baremetal/test/utils/: Reader.cpp  Reader.h
backend/baremetal/types/: Array.h  BatchNorm.h  Image.h  Kernel.h  Macros.h  Matrix.h  ScalarTypes.h
backend/execu_python/: __init__.py  datasets.py  transforms.py
backend/execu_python/htp/: builder.py  resnet50v15.py
backend/execu_python/vulkan/: __init__.py  resnet50v15.py
backend/execu_python/xnnpack/: builder.py  resnet50v15.py  yolov10.py
backend/nativ_python/xnnpack/: resnet50v1.5.py
scripts/: copy_imagenet_2012.py  export_resnet50_for_test.py  interactive.py  print_resnet50_weights.py  recompile_custom_op.sh  test_baremetal_resnet50.py
scripts/quantization_tests/: config.json  results.json  setup_for_quantization.sh  test_diffrent_input_sizes.py
(+58 files in other folders)
